welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:9: error: not found: value hauteur
        setPos(x,hauteur-1-y)
                 ^